--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
         <script src = "https://d3js.org/d3.v5.js"></script>
         <script src = "index.js"></script>
         <script src = "piechart.js"></script>
+        <script src = "linechart.js"></script>
     </body>    
 
 </html>
