--- a/Dave_Visuals/Failed-examples/Bar Graph tooltips/OGindex.html
+++ b/Dave_Visuals/Failed-examples/Bar Graph tooltips/OGindex.html
@@ -1,3 +1,4 @@
+Using d3-tip to add tooltips to a d3 bar chart.
 <!DOCTYPE html>
 <meta charset="utf-8">
 <style>
@@ -60,10 +61,10 @@ body {
 <script>
 
 var margin = {top: 40, right: 20, bottom: 30, left: 40},
-    width = 1500 - margin.left - margin.right,
+    width = 960 - margin.left - margin.right,
     height = 500 - margin.top - margin.bottom;
 
-var formatPercent = d3.format(".3f");
+var formatPercent = d3.format(".0%");
 
 var x = d3.scale.ordinal()
     .rangeRoundBands([0, width], .1);
@@ -84,7 +85,7 @@ var tip = d3.tip()
   .attr('class', 'd3-tip')
   .offset([-10, 0])
   .html(function(d) {
-    return "<strong>Sea Level Change (in.):</strong> <span style='color:red'>" + d.change + "</span>";
+    return "<strong>Frequency:</strong> <span style='color:red'>" + d.frequency + "</span>";
   })
 
 var svg = d3.select("body").append("svg")
@@ -96,14 +97,13 @@ var svg = d3.select("body").append("svg")
 svg.call(tip);
 
 d3.tsv("data.tsv", type, function(error, data) {
-  x.domain(data.map(function(d) { return d.year; }));
-  y.domain([-1, d3.max(data, function(d) { return d.change; })]);
+  x.domain(data.map(function(d) { return d.letter; }));
+  y.domain([0, d3.max(data, function(d) { return d.frequency; })]);
 
   svg.append("g")
       .attr("class", "x axis")
       .attr("transform", "translate(0," + height + ")")
       .call(xAxis);
-
 
   svg.append("g")
       .attr("class", "y axis")
@@ -113,23 +113,23 @@ d3.tsv("data.tsv", type, function(error, data) {
       .attr("y", 6)
       .attr("dy", ".71em")
       .style("text-anchor", "end")
-      .text("Sea Level Change");
+      .text("Frequency");
 
   svg.selectAll(".bar")
       .data(data)
     .enter().append("rect")
       .attr("class", "bar")
-      .attr("x", function(d) { return x(d.year); })
+      .attr("x", function(d) { return x(d.letter); })
       .attr("width", x.rangeBand())
-      .attr("y", function(d) { return y(d.change); })
-      .attr("height", function(d) { return height - y(d.change); })
+      .attr("y", function(d) { return y(d.frequency); })
+      .attr("height", function(d) { return height - y(d.frequency); })
       .on('mouseover', tip.show)
       .on('mouseout', tip.hide)
 
 });
 
 function type(d) {
-  d.change = +d.change;
+  d.frequency = +d.frequency;
   return d;
 }
 
