--- a/116/Data-Visualization-Dave/Data-Visualization-Dave/Dave_Visuals/Data-examples/Tooltip World Map/index.html
+++ b/116/Data-Visualization-Dave/Data-Visualization-Dave/Dave_Visuals/Data-examples/Tooltip World Map/index.html
@@ -1,5 +1,33 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+<head>
+
+  <!-- <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase.js"></script> -->
+
+  <!-- MUST INCLUDE FIREBASE AT VERY BEGINNING -->
+
+  <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-app.js"></script>
+
+  <!-- Add additional services that you want to use -->
+  <!-- <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-auth.js"></script> -->
+  <!-- <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-database.js"></script> -->
+  <!-- <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-firestore.js"></script> -->
+  <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-storage.js"></script>
+  <!-- <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-messaging.js"></script> -->
+  <!-- <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase-functions.js"></script> -->
+  <script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyAdulZqhzuyQ274Hssvo4duvmp_arpHKA0",
+    authDomain: "dataviz-adf9c.firebaseapp.com",
+    databaseURL: "https://dataviz-adf9c.firebaseio.com",
+    projectId: "dataviz-adf9c",
+    storageBucket: "dataviz-adf9c.appspot.com",
+    messagingSenderId: "180690652523"
+  };
+  firebase.initializeApp(config);
+  </script>
+</head>
 <style>
 
   .names {
@@ -81,6 +109,7 @@
 <script src="http://d3js.org/queue.v1.min.js"></script>
 <script src="http://d3js.org/topojson.v1.min.js"></script>
 <script src="d3-tip.js"></script>
+
 <script>
 var format = d3.format(",");
 
@@ -166,5 +195,8 @@ function ready(error, data, population) {
 }
 
 </script>
+<progress value = "0" max = "100" id = "uploader">0%</progress>
+<input type = "file" value = "upload" id = "fileButton"/>
+<script src="firebaseStorage.js"></script>
 </body>
 </html>
