added global css color variables and linked menu to new .html pages

--- a/dataExamples/tooltipWorldMap/index.html
+++ b/dataExamples/tooltipWorldMap/index.html
@@ -36,9 +36,9 @@
 
   <div class="menubar" id="mymenu">
     <a href="#home" class="selected">Home</a>
-    <a href="#maps">Maps</a>
-    <a href="#otherVisuals">Other Visuals</a>
-    <a href="#about">About</a>
+    <a href="mapsPage.html">Maps</a>
+    <a href="otherVisuals.html">Other Visuals</a>
+    <a href="about.html">About</a>
     <a href="javascript:void(0);" class="icon" onclick="hamFunction()">
       <i class="fa fa-bars"></i>
     </a>
