--- a/dataExamples/tooltipWorldMap/index.html
+++ b/dataExamples/tooltipWorldMap/index.html
@@ -28,6 +28,7 @@
   firebase.initializeApp(config);
   </script>
   <link rel="stylesheet" type="text/css" href="master.css" />
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
 
@@ -35,10 +36,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <div class="menubar" id="mymenu">
-    <a href="#home" class="selected">Home</a>
-    <a href="mapsPage.html">Maps</a>
-    <a href="otherVisuals.html">Other Visuals</a>
-    <a href="about.html">About</a>
+    <a href="#home" class="selected">HOME</a>
+    <a href="mapsPage.html">MAPS</a>
+    <a href="otherVisuals.html">OTHER VISUALS</a>
+    <a href="about.html">ABOUT</a>
     <a href="javascript:void(0);" class="icon" onclick="hamFunction()">
       <i class="fa fa-bars"></i>
     </a>
