completed menu bar

--- a/dataExamples/tooltipWorldMap/about.html
+++ b/dataExamples/tooltipWorldMap/about.html
@@ -2,8 +2,24 @@
 <html>
 <head>
 	<title>About</title>
+	<link rel="stylesheet" type="text/css" href="master.css" />
+	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+	<script type="text/javascript" src="master.js"></script>
 </head>
 <body>
+
+  <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <div class="menubar" id="mymenu">
+    <a href="index.html">HOME</a>
+    <a href="mapsPage.html">MAPS</a>
+    <a href="otherVisuals.html">OTHER VISUALS</a>
+    <a href="about.html" class="selected">ABOUT</a>
+    <a href="javascript:void(0);" class="icon" onclick="hamFunction()">
+      <i class="fa fa-bars"></i>
+    </a>
+  </div>
 
 </body>
 </html>
