--- a/dataExamples/tooltipWorldMap/index.html
+++ b/dataExamples/tooltipWorldMap/index.html
@@ -29,6 +29,8 @@
   </script>
   <link rel="stylesheet" type="text/css" href="master.css" />
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <script type="text/javascript" src="master.js"></script>
+
 </head>
 <body>
 
@@ -36,7 +38,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <div class="menubar" id="mymenu">
-    <a href="#home" class="selected">HOME</a>
+    <a href="index.html" class="selected">HOME</a>
     <a href="mapsPage.html">MAPS</a>
     <a href="otherVisuals.html">OTHER VISUALS</a>
     <a href="about.html">ABOUT</a>
