--- a/dataExamples/tooltipWorldMap/mapsPage.html
+++ b/dataExamples/tooltipWorldMap/mapsPage.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Maps</title>
+  <title>Maps</title>
+  <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 	<link rel="stylesheet" type="text/css" href="master.css" />
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-	<script type="text/javascript" src="master.js"></script>
+  <script type="text/javascript" src="master.js"></script>  
+  <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
-  <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-  <div class="menubar" id="mymenu">
-    <a href="index.html">HOME</a>
-    <a href="mapsPage.html" class="selected">MAPS</a>
-    <a href="otherVisuals.html">OTHER VISUALS</a>
-    <a href="about.html">ABOUT</a>
-    <a href="javascript:void(0);" class="icon" onclick="hamFunction()">
-      <i class="fa fa-bars"></i>
-    </a>
-  </div>
 
+  <div id="nav-placeholder"></div>
+  <script>
+    $(function(){
+      $("#nav-placeholder").load("navigation.html");
+    });
+  </script>
+
+  
 </body>
 </html>
