--- a/dataExamples/tooltipWorldMap/navigation.html
+++ b/dataExamples/tooltipWorldMap/navigation.html
@@ -1,6 +1,6 @@
 <div class="menubar" id="mymenu">
   
-  <a href="index.html" class="selected">HOME</a>
+  <a href="index.html">HOME</a>
   <a href="mapsPage.html">MAPS</a>
   <a href="otherVisuals.html">OTHER VISUALS</a>
   <a href="about.html">ABOUT</a>
