--- a/dataExamples/tooltipWorldMap/otherVisuals.html
+++ b/dataExamples/tooltipWorldMap/otherVisuals.html
@@ -15,7 +15,9 @@
   <div id="nav-placeholder"></div>
   <script>
     $(function(){
-      $("#nav-placeholder").load("navigation.html");
+      $("#nav-placeholder").load("navigation.html", function() {
+        $("a[href= 'otherVisuals.html']").addClass("selected");
+      });
     });
   </script>
 
