--- a/Projects/testingTSV/index.html
+++ b/Projects/testingTSV/index.html
@@ -99,7 +99,7 @@ var title = svg.append("text")
     .attr("dy", ".71em")
     .text(2000);
 
-d3.tsv("population.tsv", function(error, data) {
+d3.tsv("test.tsv", function(error, data) {
 
   // Convert strings to numbers.
   data.forEach(function(d) {
