--- a/Projects/testingTSV/oldversion.html
+++ b/Projects/testingTSV/oldversion.html
@@ -12,7 +12,7 @@ svg {
 
 .y.axis line {
   stroke: rgb(26, 22, 22);
-  stroke-opacity: 1;
+  stroke-opacity: .2;
   shape-rendering: crispEdges;
 }
 
@@ -80,7 +80,7 @@ var yAxis = d3.svg.axis()
     .scale(y)
     .orient("right")
     .tickSize(-width)
-    .tickFormat(function(d) { return Math.round(Math.abs(d / 1)) ; });
+    .tickFormat(function(d) { return Math.round(d / 1) ; });
  var div = d3.select("body").append("div")	
     .attr("class", "tooltip")				
     .style("opacity", 0);
@@ -99,7 +99,7 @@ var birthyears = svg.append("g")
 var title = svg.append("text")
     .attr("class", "title")
     .attr("dy", ".71em")
-    .text(2014);
+    .text(2000);
 
 d3.tsv("test.tsv", function(error, data) {
 
@@ -151,7 +151,7 @@ d3.tsv("test.tsv", function(error, data) {
       .attr("x", -barWidth / 2)
       .attr("width", barWidth)
       .attr("y", y)
-      .attr("height", function(value) { return height - y(value)+10; })       
+      .attr("height", function(value) { return height - y(value); })       
        .on("mouseover", function(d) {		
             div.transition()		
                 .duration(200)		
@@ -181,6 +181,10 @@ d3.tsv("test.tsv", function(error, data) {
       .style("text-anchor", "middle")
       .text("Temperature");  
 
+  // Add labels to show birthyear.
+ /* birthyear.append("text")
+      .attr("y", height - 4)
+      .text(function(birthyear) { return birthyear; });*/
 
   // Add labels to show age (separate; not animated).
   svg.selectAll(".month")
@@ -217,16 +221,13 @@ d3.tsv("test.tsv", function(error, data) {
       .transition()
         .duration(750)
         .attr("y", y)
-        .attr("height", function(value) { return height - y(value)+10; });
+        .attr("height", function(value) { return height - y(value); });
   }
 });
 
 
-/*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
 
-Data Update for different countries
 
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
 
 
 
@@ -239,6 +240,12 @@ d3.selectAll('.selector')
 		// update function:
 function updateTest(source) {
 		d3.tsv(source, function(error,data) {
+			
+
+            var margin = {top: 20, right: 40, bottom: 30, left: 20},
+    width = 960 - margin.left - margin.right,
+    height = 500 - margin.top - margin.bottom,
+    barWidth = Math.floor(width / 19) - 1;
 
 var x = d3.scale.linear()
     .range([barWidth / 2, width - barWidth / 2]);
@@ -251,10 +258,20 @@ var yAxis = d3.svg.axis()
     .orient("right")
     .tickSize(-width)
     .tickFormat(function(d) { return Math.round(d / 1) ; });
+ var div = d3.select("body").append("div")	
+    .attr("class", "tooltip")				
+    .style("opacity", 0);
+
 
 // A sliding container to hold the bars by birthyear.
 var birthyears = svg.append("g")
     .attr("class", "birthyears");
+
+// A label for the current year.
+var title = svg.append("text")
+    .attr("class", "title")
+    .attr("dy", ".71em")
+    .text(2000);
 
 // Convert strings to numbers.
 data.forEach(function(d) {
@@ -263,8 +280,6 @@ data.forEach(function(d) {
   d.year = +d.year;
   d.month = +d.month;
 });
-var dot = svg.select('.birthyear').data(data)
-dot.exit().remove()
 
 // Compute the extent of the data set in age and years.
 var month1 = d3.max(data, function(d) { return d.month; }),
@@ -274,10 +289,7 @@ var month1 = d3.max(data, function(d) { return d.month; }),
 
 // Update the scale domains.
 x.domain([year1 - month1, year1]);
-y.domain([d3.min(data, function(d) 
-         { if (d.tem <0) {return d.tem}
-         else {return 0}; }), d3.max(data, 
-         function(d) { return d.tem; })]);
+y.domain([0, d3.max(data, function(d) { return d.tem; })]);
 
 
 // Produce a map from year and birthyear to [male, female].
@@ -286,8 +298,7 @@ data = d3.nest()
     .key(function(d) { return d.year - d.month; })
     .rollup(function(v) { return v.map(function(d) { return d.tem; }); })
     .map(data);
-var dot3 = svg.select('g').data(data)
-dot3.exit().remove()
+
 // Add an axis to show the population values.
 svg.append("g")
     .attr("class", "y axis")
@@ -297,26 +308,21 @@ svg.append("g")
   .filter(function(value) { return !value; })
     .classed("zero", true);
 
-    var dot3 = svg.select('g').data(data)
-dot3.exit().remove()
 // Add labeled rects for each birthyear (so that no enter or exit is required).
 var birthyear = birthyears.selectAll(".birthyear")
     .data(d3.range(year0 - month1, year1 + 1, 1))
-    
   .enter().append("g")
     .attr("class", "birthyear")
     .attr("transform", function(birthyear) { return "translate(" + x(birthyear) + ",0)"; });
 
 birthyear.selectAll("rect")
-
     .data(function(birthyear) { return data[year][birthyear] || [0, 0]; })
   .enter().append("rect")
 
     .attr("x", -barWidth / 2)
     .attr("width", barWidth)
     .attr("y", y)
-    .attr("height", function(value) { 
-        return height - y(value) +10  ; })       
+    .attr("height", function(value) { return height - y(value); })       
      .on("mouseover", function(d) {		
           div.transition()		
               .duration(200)		
@@ -331,6 +337,25 @@ birthyear.selectAll("rect")
               .style("opacity", 0);	
       });
 
+  svg.append("text")             
+    .attr("transform",
+          "translate(" + (width/2) + " ," + 
+                         (height + margin.bottom ) + ")")
+    .style("text-anchor", "middle")
+    .text("Month");
+
+  svg.append("text")
+    .attr("transform", "rotate(-90)")
+    .attr("y", 0 - margin.left)
+    .attr("x",0 - (height / 2))
+    .attr("dy", "1em")
+    .style("text-anchor", "middle")
+    .text("Temperature");  
+
+// Add labels to show birthyear.
+/* birthyear.append("text")
+    .attr("y", height - 4)
+    .text(function(birthyear) { return birthyear; });*/
 
 // Add labels to show age (separate; not animated).
 svg.selectAll(".month")
@@ -367,7 +392,9 @@ function update() {
     .transition()
       .duration(750)
       .attr("y", y)
-      .attr("height", function(value) { return height - y(value) +10; });
+      .attr("height", function(value) { return height - y(value); });
+      rect.exit().transition().attr('r',0).duration(1000).remove();
+
 }
 });
 
