--- a/co2/energy.html
+++ b/co2/energy.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Energy</title>
+  <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 	<link rel="stylesheet" type="text/css" href="master.css" />
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<script type="text/javascript" src="master.js"></script>
