--- a/testingTSV/index.html
+++ b/testingTSV/index.html
@@ -1,73 +1,9 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<style>
 
-svg {
-  font: 10px sans-serif;
-}
-
-.y.axis path {
-  display: none;
-}
-
-.y.axis line {
-  stroke: rgb(26, 22, 22);
-  stroke-opacity: 1;
-  shape-rendering: crispEdges;
-}
-
-.y.axis .zero line {
-  stroke: #000;
-  stroke-opacity: 1;
-}
-
-.title {
-  font: 300 78px Helvetica Neue;
-  fill: #666;
-}
-
-.birthyear,
-.month {
-  text-anchor: middle;
-}
-
-.birthyear {
-  fill: #fff;
-}
-
-rect {
-  fill-opacity: .6;
-  fill: #1f77b4;
-}
-
-rect:first-child {
-  fill: #1f77b4;
-}
-rect:nth-child(2) {
-  fill:transparent;
-}
-#inds{
-	position:absolute;
-	top:10px;
-	right:10px;
-}
-divs.tooltip {	
-	
-    position: absolute;			
-    text-align: center;			
-    width: 60px;					
-    height: 28px;					
-    padding: 2px;				
-    font: 12px sans-serif;		
-    background: lightsteelblue;	
-    border: 0px;		
-    border-radius: 8px;			
-    pointer-events: none;		
-}
-
-</style>
 <body>
 <script src="https://d3js.org/d3.v3.min.js"></script>
+<link rel="stylesheet" type="text/css" href="index.css"/>
 
 <select id="inds">
 
