--- a/testingTSV/tempVisual.html
+++ b/testingTSV/tempVisual.html
@@ -3,7 +3,7 @@
 
 <body>
 <script src="https://d3js.org/d3.v3.min.js"></script>
-<link rel="stylesheet" type="text/css" href="index.css"/>
+<link rel="stylesheet" type="text/css" href="tempVisual.css"/>
 
 <select id="inds">
 
