--- a/co2/otherVisuals.html
+++ b/co2/otherVisuals.html
@@ -23,12 +23,20 @@
   </script>
 
   <div id="vis">
-    <button id="play-button">Play</button>
-    <input type="number" id="myVal" placeholder="Year">
-    <input type="submit" id="Submit" value="Enter">
-    <p id="instructions">Enter a year between 1960 and 2017</p>
-    <div id="displayYearDiv">
+    <div class="displayDiv" id="userInput">
+      <button id="play-button">Play</button>
+      <input type="number" id="myVal" placeholder="Year">
+      <input type="submit" id="Submit" value="Enter">
+      <p id="instructions">Or<br><br>Enter a year between 1960 and 2017</p>
+    </div>
+    <div class="displayDiv">
       <p id="displayYear">1960</p>
+    </div>
+    <div class="displayDiv" id="topThree">
+      <h3>Countries with the most</br> CO2 Emissions:</h3>
+    </div>
+    <div class="displayDiv" id="legend">
+      <img src="bubbleLegend.png" alt="Legend not found">
     </div>
   </div>
 
