--- a/testingTSV/tempVisualM.html
+++ b/testingTSV/tempVisualM.html
@@ -239,6 +239,11 @@ var title = svg.append("text")
     .attr("class", "title")
     .attr("dy", ".71em")
     .text(2014);
+var title2 = svg.append("text")
+    .attr("class", "title2")
+    .attr("dx","10em")
+    .attr("dy", ".60em")
+    .text("Afghanistan");
 
 d3.tsv("crucy.v3.23.1901.2014.Afghanistan.tmp.tsv", function(error, data) {
 
@@ -258,7 +263,7 @@ d3.tsv("crucy.v3.23.1901.2014.Afghanistan.tmp.tsv", function(error, data) {
 
   // Update the scale domains.
   x.domain([year1 - month1, year1]);
-  y.domain([-75, 50]);
+  y.domain([-50, 50]);
 
   
   // Produce a map from year and birthyear to [male, female].
@@ -388,11 +393,23 @@ d3.selectAll('.selector')
 			.on('click', function(d) {
 				updateTest(this.id);
 			})@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@WAS SELECTOR FOR BUTTON. ^^^ REPLACES THIS*/                                        
-		
+function updateTitle(source){
+    var ret = source.replace(/crucy.v3.23.1901.2014./g,'');
+var ret2 = ret.replace(/.tmp.tsv/g,'');
+var ret3 = ret2.replace(/_/g,'');
+title2.text(ret3);
+}		
 		// update function:
 function updateTest(source) {
 		d3.tsv(source, function(error,data) {
-                
+var ret = source.replace(/crucy.v3.23.1901.2014./g,'');
+var ret2 = ret.replace(/.tmp.tsv/g,'');
+var ret3 = ret2.replace(/_/g,' ');
+
+var titSource = updateTitle(source);
+
+
+
 var x = d3.scale.linear()
     .range([barWidth / 2, width - barWidth / 2]);
 
@@ -427,7 +444,7 @@ var month1 = d3.max(data, function(d) { return d.month; }),
 
 // Update the scale domains.
 x.domain([year1 - month1, year1]);
-y.domain([ -75,50 ]);
+y.domain([ -50,50 ]);
 //y.domain([d3.min(data, function(d) { return d.temp}) , d3.max(data, function(d) { return d.temp; })]);
 
 
