--- a/co2/mapsPage.html
+++ b/co2/mapsPage.html
@@ -28,10 +28,13 @@
 
   <script src="d3-tip.js"></script>
   <h2 id="titleTop">CO2 Emissions (in Metric Tons)</h2>
+  <img src="CO2MapLegend.png" alt="No Legend Available" id="co2Legend">
   <script type="text/javascript" src="map.js"></script>
   <h2 id="titleMid">Temperature</h2>
+  <img src="tempMapLegend.png" alt="No Legend Available" id="tempLegend">
   <script type="text/javascript" src="mapTemp.js"></script>
   <h2 id="titleBot">Population</h2>
+  <img src="populationLegend.png" alt="No Legend Available" id="popLegend">
   <script type="text/javascript" src="mapPop.js"></script>
   
 </body>
