added anchors to jump to maps

--- a/co2/mapsPage.html
+++ b/co2/mapsPage.html
@@ -26,6 +26,13 @@
     });
   </script>
 
+  <div id = "navMap">
+    <h1>Map Navigation</h1>
+    <a href = "#titleTop">CO2 Emissions</a><br/>
+    <a href = "#titleMid">Temperature</a><br/>
+    <a href = "#titleBot">Population</a><br/>
+  </div>
+
   <script src="d3-tip.js"></script>
   <h2 id="titleTop">CO2 Emissions (in Metric Tons)</h2>
   <img src="CO2MapLegend.png" alt="No Legend Available" id="co2Legend">
