--- a/co2/index.html
+++ b/co2/index.html
@@ -34,11 +34,11 @@
   firebase.initializeApp(config);
   </script>
   <link rel="stylesheet" type="text/css" href="master.css" />
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link href="/https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <link href="/https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <script type="text/javascript" src="master.js"></script>
   <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
 </head>
@@ -49,7 +49,7 @@
   <script>
     $(function(){
       $("#nav-placeholder").load("navigation.html", function() {
-        $("a[href= 'index.html']").addClass("selected");
+        $("a[href= '/index.html']").addClass("selected");
       });
     });
   </script>
