--- a/co2/index.html
+++ b/co2/index.html
@@ -33,7 +33,7 @@
   };
   firebase.initializeApp(config);
   </script>
-  <link type="text/css" src="/co2/master.css" />
+  <link src="/co2/master.css" />
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <script src="/co2/master.js"></script>
