--- a/co2/index.html
+++ b/co2/index.html
@@ -33,10 +33,10 @@
   };
   firebase.initializeApp(config);
   </script>
-  <link href="master.css" />
+  <link href="/master.css" />
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <script type="text/javascript" href="co2/master.js"></script>
+  <script type="text/javascript" href="/master.js"></script>
   <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
