--- a/co2/index.html
+++ b/co2/index.html
@@ -48,7 +48,7 @@
   <div id="nav-placeholder"></div>
   <script>
     $(function(){
-      $("#nav-placeholder").load("/co2/navigation.html", function() {
+      $("#nav-placeholder").load("/navigation.html", function() {
         $("a[href= 'index.html']").addClass("selected");
       });
     });
