Styled anchors, fixed nav selected bug

--- a/co2/mapsPage.html
+++ b/co2/mapsPage.html
@@ -27,10 +27,13 @@
   </script>
 
   <div id = "navMap">
-    <h1>Map Navigation</h1>
-    <a href = "#titleTop">CO2 Emissions</a><br/>
-    <a href = "#titleMid">Temperature</a><br/>
-    <a href = "#titleBot">Population</a><br/>
+    <div id="col1">
+      <a href = "#titleTop" id="anchorCO2">CO2 Emissions</a><br/>
+    </div>
+    <a href = "#titleMid" id="anchorTemp">Temperature</a>
+    <div id="col2">
+      <a href = "#titleBot" id="anchorPop">Population</a><br/>
+    </div>
   </div>
 
   <script src="d3-tip.js"></script>
