--- a/co2/energy.html
+++ b/co2/energy.html
@@ -17,7 +17,7 @@
   <script>
     $(function(){
       $("#nav-placeholder").load("navigation.html", function() {
-        $("a[href= 'index.html']").addClass("selected");
+        $("a[href= 'energy.html']").addClass("selected");
       });
     });
   </script>
