--- a/co2/tempVisual.html
+++ b/co2/tempVisual.html
@@ -17,7 +17,7 @@
   <script>
     $(function(){
       $("#nav-placeholder").load("navigation.html", function() {
-        $("a[href= 'about.html']").addClass("selected");
+        $("a[href= 'tempVisual.html']").addClass("selected");
       });
     });
   </script>
