--- a/worldMaps/co2/index.html
+++ b/worldMaps/co2/index.html
@@ -52,7 +52,7 @@
       });
     });
   </script>
-
+  <div id="slider"></div>
   <script src="d3-tip.js"></script>
   <script type="text/javascript" src="map.js"></script>
   <form action = "">
