--- a/worldMaps/energy/index.html
+++ b/worldMaps/energy/index.html
@@ -51,7 +51,7 @@
       });
     });
   </script>
-
+  <div id="slider"></div>
   <script src="d3-tip.js"></script>
   <script type="text/javascript" src="map.js"></script>
   <form action = "">
