--- a/co2/tempVisual.html
+++ b/co2/tempVisual.html
@@ -7,6 +7,8 @@
 	<link rel="stylesheet" type="text/css" href="master.css" />
     <link rel="stylesheet" type="text/css" href="tempVisual.css"/>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <script type="text/javascript" src="master.js"></script>
   <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -37,7 +39,10 @@
     </p>
     <p id="instructionsMonth">
             Months are shown in descending order where month 12 is December and month 1 is January.
-    </p>        
+    </p>       
+    <p id="sources">
+            Dataset from the Climatic Research Unit of the University of East Anglia https://crudata.uea.ac.uk/cru/data/hrg/cru_ts_3.23/crucy.1506241137.v3.23/countries/tmp/
+    </p>   
 </div>
 <select id="inds">
     <option value="crucy.v3.23.1901.2014.Afghanistan.tmp.tsv">Afghanistan</option>
@@ -273,8 +278,8 @@
         .text(2014);
     var title2 = svg.append("text")
         .attr("class", "title2")
-        .attr("dx","10em")
-        .attr("dy", ".60em")
+        .attr("dx","5em")
+        .attr("dy", ".75em")
         .text("Afghanistan");
 
     d3.tsv("crucy.v3.23.1901.2014.Afghanistan.tmp.tsv", function(error, data) {
