--- a/co2/otherVisuals.html
+++ b/co2/otherVisuals.html
@@ -36,7 +36,7 @@
       <h3>Countries with the most</br> CO2 Emissions:</h3>
     </div>
     <div class="displayDiv" id="legend">
-      <img src="bubbleLegend.png" alt="Legend not found">
+      <img src="png/bubbleLegend.png" alt="Legend not found">
     </div>
   </div>
 
