--- a/co2/energy.html
+++ b/co2/energy.html
@@ -135,5 +135,6 @@
     }
     d3.select(self.frameElement).style("height", height + "px");
   </script>
+  <footer>Source:<a href="https://yearbook.enerdata.net/" target="_blank">https://yearbook.enerdata.net/</a></footer><br/>
 </body>
 </html>
