--- a/co2/tempVisual.html
+++ b/co2/tempVisual.html
@@ -44,6 +44,16 @@
     <p id="sources">
         Source:<a href="https://crudata.uea.ac.uk/cru/data/hrg/cru_ts_3.23/crucy.1506241137.v3.23/countries/tmp/" target="_blank">https://crudata.uea.ac.uk/cru/data/hrg/cru_ts_3.23/crucy.1506241137.v3.23/countries/tmp/</a><br/>
     </p>      
+    <p id="educate1">
+        Why it matters        
+    </p>
+    <p id="educate">
+        Since the 1900's, the the temperature of each country has experienced around 1°C of warming. This may not appear to be a big 
+        deal since it's just 1°C, however this causes deadly problems. Hot countries will face longer and more frequent heat waves causing
+         droughts. The increase in temperature will also kill off crops, plants and animal species, and the coral reefs. The melting of 
+         the polar ice caps will cause a sea level rise which affects small islands the most. The coral reefs won't be able to protect the marine
+          animals and humans that rely on the reefs for protection.
+    </p>
 </div>
 <select id="inds">
     <option value="data/crucy.v3.23.1901.2014.Afghanistan.tmp.tsv">Afghanistan</option>
