--- a/co2/otherVisuals.html
+++ b/co2/otherVisuals.html
@@ -25,9 +25,10 @@
   <div id="vis">
     <div class="displayDiv" id="userInput">
       <button id="play-button">Play</button>
+      <p id="instructions">Or</br></br>Enter a year between 1960 and 2017</p>
       <input type="number" id="myVal" placeholder="Year">
+      </br></br>
       <input type="submit" id="Submit" value="Enter">
-      <p id="instructions">Or<br><br>Enter a year between 1960 and 2017</p>
     </div>
     <div class="displayDiv">
       <p id="displayYear">1960</p>
