--- a/co2/energy.html
+++ b/co2/energy.html
@@ -135,6 +135,12 @@
     }
     d3.select(self.frameElement).style("height", height + "px");
   </script>
-  <footer>Source:<a href="https://yearbook.enerdata.net/" target="_blank">https://yearbook.enerdata.net/</a></footer><br/>
+  <p>It is important to know how the use of energy can impact climate change. As we can see in this sunburst, more and more energy is being
+    used every year. These energy include coals, natuarl gas, and oil. However, there are energy and resources that a non-renewable. Meaning
+    if we keep producing and consuming resources and energy, the world will eventually run out. We need to know how to minimize our energy usage
+    not only for the world, but for the climate as well. Fossil fuels for example generate a lot of CO2 that is a factor to global warming. This 
+    visualization tells us story of how if we keep using energy like this. Climate change will accelerate.
+  </p>
+  <p>Source:<a href="https://yearbook.enerdata.net/" target="_blank">https://yearbook.enerdata.net/</a></p><br/>
 </body>
 </html>
